...
                    children: <Widget>[
                      new Container(
                          child: Padding(
                              padding: EdgeInsets.fromLTRB(0, 0, 0, 10),
                              child: Column(children: [
                                Text("How many cups would you like?",
                                    key: Key('cup-text'),
                                    style: TextStyle(
                                        fontFamily: 'Montserrat',
                                        fontSize: 18,
                                        color: Color(0xff4C748B)))
                              ]))),
                      new SizedBox(
                          width: 300,
                          height: 40,
                          child: TextField(
                            key: Key('enter-cups'),
                            style: TextStyle(
                                fontFamily: 'Montserrat',
                                fontSize: 14,
                                color: Color(0xff4C748B)),
                            decoration: new InputDecoration(
                              enabledBorder: const OutlineInputBorder(
...
